--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -166,7 +166,8 @@ DerivedData/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -371,7 +372,7 @@ gradle-app.setting
 # Temporary folders
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
